@@ -218,11 +218,11 @@ include_once "include/page_header.php";
 		$new_gitem = get_request('new_graph_item', array());
 		foreach($_REQUEST['items'] as $gid => $data)
 		{
-			if(	$new_gitem['itemid']		== $data['itemid'] &&
-				$new_gitem['yaxisside']		== $data['yaxisside'] &&
-				$new_gitem['calc_fnc']		== $data['calc_fnc'] &&
-				$new_gitem['type']		== $data['type'] &&
-				$new_gitem['periods_cnt']	== $data['periods_cnt']) 
+			if(	(bccomp($new_gitem['itemid'] , $data['itemid'])==0) &&
+				$new_gitem['yaxisside'] == $data['yaxisside'] &&
+				$new_gitem['calc_fnc'] == $data['calc_fnc'] &&
+				$new_gitem['type'] == $data['type'] &&
+				$new_gitem['periods_cnt'] == $data['periods_cnt']) 
 			{
 				$already_exist = true;
 				break;
